@@ -17,13 +17,17 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Fixed a GMOTD PlaySoundFile",
-		"• Fixed Enable Options for RaidCD",
-		"• Removed SLE Armory Incompatibility check",
+		"• Added Eternal Palace to Raid Progress on Tooltip",
+		"• Changed Layout due to removal from Masque",
+		"• Added S&L Merchant skin incompatibility check",
+		"• Enable Cutaway Health on Player-/Target Frame",
+		"• RaiderIO skin fix",
 
 		-- "• ''",
 	" ",
 	"Notes:",
+		"• Since i don't use Masque anymore you should visit my Interface Git Site:",
+		"• https://git.tukui.org/Merathilis/Interface"
 		-- "• ''",
 }
 
